# hello-barcode-xpress-for-linux

./: .gitignore  CMakeLists.txt  README.md  readbarcodes.cpp
